--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "react-dom": "18.2.0",
     "typescript": "4.8.4",
     "zod": "^3.19.1"
+  },
+  "devDependencies": {
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.1"
   }
 }
