--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "next": "13.0.1",
+    "prisma": "^4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4",
@@ -33,6 +34,9 @@
     "**/*.{js,ts,jsx,tsx}": [
       "prettier --write",
       "eslint --fix"
+    ],
+    "prisma/schema.prisma": [
+      "prisma format"
     ],
     "*.json": [
       "prettier --write"
